--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ description = "Student performance prediction with MLOps pipeline"
 readme = "README.md"
 requires-python = ">=3.10"
 license = { file = "LICENSE" }
-dependencies = ["numpy", "pandas", "scikit-learn"]
+dependencies = ["numpy", "pandas", "scikit-learn", "seaborn", "matplotlib"]
 
 [project.optional-dependencies]
-dev = ["pytest", "black", "ruff"]
+dev = ["pytest", "black", "ruff", "matplotlib", "seaborn>=0.13.2"]
