--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ MANIFEST
 models/
 reports/
 mlruns/
+notebooks/catboost_info/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
