--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
+          # If CI fails because optional models import at module import-time:
+          # pip install -e ".[api, dev, ml, mlops]"
 
       - name: Lint (ruff)
         run: ruff check .
