feat: separated production deployment from staging

--- a/.github/workflows/cd-cloudrun.yml
+++ b/.github/workflows/cd-cloudrun.yml
@@ -4,17 +4,11 @@ on:
   push:
     tags:
       - "v*"
+  workflow_dispatch:
 
-env:
-  PROJECT_ID: ${{ vars.GCP_PROJECT_ID }}
-  REGION: ${{ vars.GCP_REGION }}
-  SERVICE: ${{ vars.CLOUD_RUN_SERVICE }}
-  ARTIFACT_REPO: ${{ vars.ARTIFACT_REPO }}
-  IMAGE_NAME: ${{ vars.IMAGE_NAME }} 
-  MODEL_VERSION: ${{ github.ref_name }}   # e.g. v0.1.0
-  MODEL_REGISTRY_URI: ${{ vars.MODEL_REGISTRY_URI }}  # e.g. gs://bucket/student-performance
-
-
+permissions:
+  contents: read
+  id-token: write
 
 jobs:
   smoke:
@@ -22,80 +16,100 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install
+      - name: Install (for tests)
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+          pip install -e ".[dev,api]"   # add api so smoke tests can import API code safely
 
       - name: Run smoke tests
-        run: |
-          pytest -m smoke -q
+        run: pytest -m smoke -q
 
   deploy:
+    environment: production
     needs: [smoke]
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write   # required for WIF
+    env:
+      PROJECT_ID: ${{ vars.GCP_PROJECT_ID }} # e.g., student-performance-indicator
+      REGION: ${{ vars.GCP_REGION }} # e.g., us-central1
+      SERVICE: ${{ vars.CLOUD_RUN_SERVICE }} # e.g., student-performance-api (production)
+      ARTIFACT_REPO: ${{ vars.ARTIFACT_REPO }} # e.g., student-performance
+      MODEL_REGISTRY_URI: ${{ vars.MODEL_REGISTRY_URI }}  # optional, e.g. gs://freshmoon39/student-performance
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Auth to GCP (WIF)
-        uses: google-github-actions/auth@v2
+        uses: google-github-actions/auth@v3
         with:
           workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
 
       - name: Setup gcloud
         uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ env.PROJECT_ID }}
 
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
       - name: Build and Push image
+        shell: bash
         run: |
+          set -euo pipefail
           TAG="${GITHUB_REF_NAME}"  # e.g. v0.2.0
-          IMAGE="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REPO }}/${{ env.IMAGE_NAME }}:${TAG}"
-          echo "IMAGE=$IMAGE" >> $GITHUB_ENV
-          docker build -t "$IMAGE" .
-          docker push "$IMAGE"
+          IMAGE_URI="${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPO}/${SERVICE}:${TAG}"
+          echo "IMAGE_URI=${IMAGE_URI}" >> "$GITHUB_ENV"
+          docker build -t "${IMAGE_URI}" .
+          docker push "${IMAGE_URI}"
+
+      - name: Show deploy target
+        run: |
+          echo "ENVIRONMENT=${job.environment.name}"  # staging or production
+          echo "PROJECT_ID=${{ env.PROJECT_ID }}"
+          echo "REGION=${{ env.REGION }}"
+          echo "SERVICE=${{ env.SERVICE }}"
 
       - name: Deploy to Cloud Run
+        shell: bash
         run: |
-          gcloud run deploy "${{ env.SERVICE }}" \
-            --image "$IMAGE" \
-            --region "${{ env.REGION }}" \
-            --project "${{ env.PROJECT_ID }}" \
+          set -euo pipefail
+
+          ENV_VARS="ARTIFACTS_DIR=/tmp/artifacts"
+          if [ -n "${MODEL_REGISTRY_URI:-}" ]; then
+            ENV_VARS="${ENV_VARS},MODEL_REGISTRY_URI=${MODEL_REGISTRY_URI}"
+          fi
+
+          gcloud run deploy "${SERVICE}" \
+            --project "${PROJECT_ID}" \
+            --region "${REGION}" \
+            --image "${IMAGE_URI}" \
+            --port 8080 \
             --allow-unauthenticated \
-            --set-env-vars "ARTIFACTS_DIR=/tmp/artifacts" \
-            #--set-env-vars "MODEL_REGISTRY_URI=${{ env.MODEL_REGISTRY_URI }}"
+            --command "" \
+            --args "" \
+            --update-env-vars "${ENV_VARS}"
 
       - name: Post-deploy smoke
         shell: bash
         run: |
           set -euo pipefail
 
-          SERVICE_URL="$(gcloud run services describe "$SERVICE" \
-            --region "$REGION" \
+          SERVICE_URL="$(gcloud run services describe "${SERVICE}" \
+            --project "${PROJECT_ID}" \
+            --region "${REGION}" \
             --format='value(status.url)')"
 
-          echo "Service URL: $SERVICE_URL"
+          echo "Service URL: ${SERVICE_URL}"
 
-          # Health check
-          curl -fsS "$SERVICE_URL/health" | tee /tmp/health.json
+          curl -fsS "${SERVICE_URL}/health" | tee /tmp/health.json
 
-          # Predict check
-          curl -fsS -X POST "$SERVICE_URL/predict" \
+          curl -fsS -X POST "${SERVICE_URL}/predict" \
             -H "Content-Type: application/json" \
             -d '{
               "gender":"female",
@@ -105,11 +119,9 @@ jobs:
               "test_preparation_course":"none"
             }' | tee /tmp/predict.json
 
-          # Basic assertion: prediction exists
           python - <<'PY'
           import json
           with open("/tmp/predict.json","r") as f:
               obj = json.load(f)
           assert "prediction" in obj, obj
           PY
-
