--- a/.github/workflows/cd-cloudrun.yml
+++ b/.github/workflows/cd-cloudrun.yml
@@ -10,6 +10,9 @@ permissions:
   contents: read
   id-token: write
 
+env:
+  MODEL_REGISTRY_URI: ${{ vars.MODEL_REGISTRY_URI }} # gs://bucket/student-performance
+
 jobs:
   smoke:
     runs-on: ubuntu-latest
@@ -39,7 +42,7 @@ jobs:
       REGION: ${{ vars.GCP_REGION }} # e.g., us-central1
       SERVICE: ${{ vars.CLOUD_RUN_SERVICE }} # e.g., student-performance-api (production)
       ARTIFACT_REPO: ${{ vars.ARTIFACT_REPO }} # e.g., student-performance
-      MODEL_REGISTRY_URI: ${{ vars.MODEL_REGISTRY_URI }}  # optional, e.g. gs://freshmoon39/student-performance
+
 
     steps:
       - uses: actions/checkout@v4
