--- a/.github/workflows/cd-cloudrun.yml
+++ b/.github/workflows/cd-cloudrun.yml
@@ -56,6 +56,32 @@ jobs:
         with:
           project_id: ${{ env.PROJECT_ID }}
 
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: pip
+
+      - name: Install (train + publish deps)
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[api,ml,mlops]"
+
+      - name: Train + publish artifacts for this release tag
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          : "${MODEL_REGISTRY_URI:?MODEL_REGISTRY_URI must be set to base, e.g. gs://freshmoon39/student-performance}"
+
+          TAG="${GITHUB_REF_NAME}"  # v*
+          python scripts/train_and_publish.py \
+            --registry-uri "${MODEL_REGISTRY_URI}" \
+            --index-latest \
+            --release-tag "${TAG}" | tee /tmp/publish.out
+
+          echo "=== publish outputs ==="
+          cat /tmp/publish.out
+
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
