--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[dev,api,mlops]"
+          pip install -e ".[api,dev,ml]"
           # If CI fails because optional models import at module import-time:
 
       - name: Lint (ruff)
@@ -33,9 +33,3 @@ jobs:
 
       - name: Smoke tests
         run: pytest -m smoke -q
-
-      - name: Upload MLflow runs
-        uses: actions/upload-artifact@v4
-        with:
-          name: mlruns
-          path: mlruns
