--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,10 @@ jobs:
           # If CI fails because optional models import at module import-time:
 
       - name: Lint (ruff)
-        run: ruff check .
+        run: ruff check src tests scripts
 
       - name: Format check (black)
-        run: black --check .
+        run: black --check src tests scripts
 
       - name: Smoke tests
         run: pytest -m smoke -q
