--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ models/
 reports/
 mlruns/
 notebooks/catboost_info/
+artifacts/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
