--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
       REGION: ${{ vars.GCP_REGION }}
       SERVICE: ${{ vars.CLOUD_RUN_SERVICE }}
       ARTIFACT_REPO: ${{ vars.ARTIFACT_REPO }}
+      MODEL_REGISTRY_URI: ${{ vars.MODEL_REGISTRY_URI }}
 
     steps:
       - uses: actions/checkout@v4
@@ -33,28 +34,57 @@ jobs:
         with:
           project_id: ${{ env.PROJECT_ID }}
 
-      - name: Configure Docker for Artifact Registry
-        run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: pip
 
-      - name: Build & Push image
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[api,ml,mlops]"
+
+      # 1. Train and Publish to get a valid URI for this specific code version
+      - name: Train & Publish (Staging)
         shell: bash
         run: |
           set -euo pipefail
-          IMAGE_URI="${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPO}/${SERVICE}:${GITHUB_SHA}"
-          echo "IMAGE_URI=$IMAGE_URI" >> "$GITHUB_ENV"
-          docker build -t "$IMAGE_URI" .
-          docker push "$IMAGE_URI"
-          echo "Deploying image: $IMAGE_URI"
+          
+          # Publish to 'latest/RUN_ID' index
+          python scripts/train_and_publish.py \
+            --registry-uri "${MODEL_REGISTRY_URI}" \
+            --index-latest | tee publish.out
+          
+          # Capture the RUN_URI for deployment
+          RUN_URI="$(grep '^RUN_URI=' publish.out | cut -d= -f2)"
+          echo "RUN_URI=$RUN_URI" >> "$GITHUB_ENV"
 
-      - name: Deploy to Cloud Run (image update only)
-        id: deploy
+      - name: Configure Docker
+        run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+
+      - name: Build & Push Image
+        shell: bash
+        run: |
+          set -euo pipefail
+          # Tag with commit SHA for traceability
+          IMAGE_URI="${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPO}/${SERVICE}:${GITHUB_SHA}"
+          echo "IMAGE_URI=${IMAGE_URI}" >> "$GITHUB_ENV"
+          docker build -t "${IMAGE_URI}" .
+          docker push "${IMAGE_URI}"
+
+      # 2. Deploy with the specific RUN_URI
+      - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v3
         with:
           project_id: ${{ env.PROJECT_ID }}
           service: ${{ env.SERVICE }}
           region: ${{ env.REGION }}
           image: ${{ env.IMAGE_URI }}
-          suffix: ${{ github.sha }}
+          # Force the container to download the artifacts we just trained
+          env_vars: |
+            GCS_ARTIFACTS_URI=${{ env.RUN_URI }}
+            FORCE_MODEL_DOWNLOAD=1
+            ARTIFACTS_DIR=/tmp/artifacts
 
       - name: Output URL
         run: echo "Deployed to ${{ steps.deploy.outputs.url }}"
