--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[api,dev,ml]"
+          pip install -e ".[api,dev]"
           # If CI fails because optional models import at module import-time:
 
       - name: Lint (ruff)
