--- a/.github/workflows/cd-cloudrun.yml
+++ b/.github/workflows/cd-cloudrun.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install (for tests)
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[api]"   # add api so smoke tests can import API code safely
+          pip install -e ".[dev]"   # add api so smoke tests can import API code safely
 
       - name: Run smoke tests
         run: pytest -m smoke -q
