--- a/.github/workflows/cd-cloudrun.yml
+++ b/.github/workflows/cd-cloudrun.yml
@@ -143,7 +143,7 @@ jobs:
             --port 8080 \
             --allow-unauthenticated \
             --service-account sp-api-sa@freshmoon.iam.gserviceaccount.com \
-            # --revision-suffix "${REVISION_SUFFIX}" \
+            --revision-suffix "${REVISION_SUFFIX}" \
             --set-env-vars "${ENV_VARS}"
             --no-traffic  # ← ADD THIS: Don't route traffic yet
 
