--- a/.github/workflows/retrain.yml
+++ b/.github/workflows/retrain.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Install
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[api,dev,ml,mlops]"  # includes api, dev, ml, mlops deps; remove extras you don't need for faster runs
+          pip install -e ".[all]"  # includes api, dev, ml, mlops deps; remove extras you don't need for faster runs
 
       - name: Prepare run dirs
         run: |
