--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[api,dev]"
-          # If CI fails because optional models import at module import-time:
+          # Note: ml dependencies (xgboost, catboost) are optional and not required for CI
 
       - name: Lint (ruff)
         run: ruff check src tests scripts
