--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ mlops = [
 # Developer tooling
 dev = [
   "pytest>=7.4,<9.0",
+  "pytest-cov>=4.1,<6.0",
   "black>=23.0,<25.0",
   "ruff>=0.1,<1.0",
   "matplotlib>=3.7,<4.0",
