--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,25 @@ jobs:
 
       - name: Smoke tests
         run: pytest -m smoke -q
+
+  api-health:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      
+      - name: Install
+        run: |
+          pip install -e ".[api,dev]"
+      
+      - name: Start API in background
+        run: |
+          uvicorn student_performance.api:app --host 127.0.0.1 --port 8000 &
+          sleep 5
+      
+      - name: Test health endpoint
+        run: |
+          curl -f http://127.0.0.1:8000/health || exit 1
